# ORd2011-hERG-facilitation-2018

./: README.md
hERG_facilitation_HEKdata_APclamp_simulation/: README
hERG_facilitation_HEKdata_APclamp_simulation/sh/: exp_time.sh  in  run.sh  time.sh
hERG_facilitation_HEKdata_APclamp_simulation/src/: currents.c  data_out.c  eventloop.c  herg.c  input_para.c  mem.c  syspara.h  system.c  val_constants.c  win_out.c
hERG_facilitation_HEKdata_mORd_HF_APsimulation/: Makefile.in  README  in
hERG_facilitation_HEKdata_mORd_HF_APsimulation/src/: currents.c  eventloop.c  ord.c  syspara.h  val_constants.c
hERG_facilitation_HEKdata_mORd_nonHF_APsimulation/: README  in
hERG_facilitation_HEKdata_mORd_nonHF_APsimulation/check_test/: in
hERG_facilitation_HEKdata_mORd_nonHF_APsimulation/src/: currents.c  exptable.c  ord.c
hERG_facilitation_HEKdata_mORd_restitution_HF_simulation/check_test/: in
hERG_facilitation_HEKdata_mORd_restitution_HF_simulation/src/: syspara.h  val_constants.c
hERG_facilitation_HEKdata_mORd_restitution_nonHF_simulation/: README
hERG_facilitation_HEKdata_voltage-clamp_simlation/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure
hERG_facilitation_HEKdata_voltage-clamp_simlation/mkdata_sh/: 37vc_tail.sh  exp_time.sh  run.sh  vc_steady.sh  vc_tail.sh
hERG_facilitation_HEKdata_voltage-clamp_simlation/mkdata_sh/37degree/: in  time.sh  vc_tail.sh
hERG_facilitation_HEKdata_voltage-clamp_simlation/src/: data_out.c  exptable.c  herg.c  input_para.c  mem.c  rkr.eps  rkr.sh  syspara.h  system.c  val_constants.c  win_out.c
(+17 files in other folders)
